--- a/joined.html
+++ b/joined.html
@@ -2,27 +2,18 @@
 
 <html lang="en">
 <head>
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-152661857-6"></script>
-    <script>
-    window.dataLayer = window.dataLayer || [];
-    function gtag(){dataLayer.push(arguments);}
-    gtag('js', new Date());
-
-    gtag('config', 'UA-152661857-6');
-    </script>
 
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <title>Mastero - Streamline Sourcing</title>
-    <meta name="description" content="Join the waitlist for Mastero. Streamlined sourcing for premium businesses.">
-    <meta name="author" content="Mastero">
+    <title>Midas</title>
+    <meta name="description" content="Join the waitlist for Midas.">
+    <meta name="author" content="Midas">
 
-    <meta property="og:title" content="Mastero Waitlist">
+    <meta property="og:title" content="Midas Waitlist">
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://mastero.co">
-    <meta property="og:description" content="Join the waitlist for Mastero. Streamlined sourcing software for premium businesses..">
+    <meta property="og:url" content="https://midas.gold">
+    <meta property="og:description" content="Join the waitlist for Midas.">
 
     <link href="//cdn-images.mailchimp.com/embedcode/horizontal-slim-10_7.css" rel="stylesheet" type="text/css">
     <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
@@ -36,7 +27,8 @@
 <body>
     <div class="flex flex-wrap flex-col place-content-center content-center min-h-screen px-10 pt-24">
         <div class="flex justify-center">
-            <img id="logo" class="text-center max-w-4/5 sm:w-80" src="new-mastero-logo.png" />
+            <!--<img id="logo" class="text-center sm:w-80 h-auto" src="new-Midas-logo.png" />-->
+            <h1 id="name"><span id="highlight">MIDAS</span></h1>
         </div>
 
         <div class="flex flex-col justify-center">
@@ -64,7 +56,7 @@
                 </a>
         
             </div>
-            <p class="my-8 text-muted text-center">&copy; <a href="" class="font-bold hover:text-white">MASTERO</a> 2021.</p>
+            <p class="my-8 text-muted text-center">&copy; <a href="" class="font-bold hover:text-white">Midas</a> 2022.</p>
         </footer>
         
     </div>
